# smart-data-center_V3

./: .gitignore  README.md  app.py  configs.json  configs_simple.py  models.py  mqtt_data.py  property_chart.py  pyproject.toml  requirements.txt  smart_data_center.conf
pages/: Configs.md  DL303.md  ElectricalBox.md  EngineRoom.md  IMAC2706.md  MeetingRoom.md
