[project]
name = "smart-data-center-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "apscheduler==3.6.3",
    "mysqlclient==2.1.1",
    "paho-mqtt==1.6.1",
    "pymysql==1.1.0",
    "sqlalchemy==2.0.20",
    "taipy==3.1.0",
]

[dependency-groups]
dev = ["ruff>=0.11.8"]
